fix bug in overflow

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -17,7 +17,7 @@ body {
   margin: 0 0 20px;
   padding: 10px;
   background: #fff;
-  overflow: hiden;
+  overflow: hidden;
   border-radius: 7%;
   justify-items: center;
 }
